welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:4: error: ';' expected but 'false' found.
     	retur false
              ^SlugTracking:7: error: ')' expected but ';' found.
    if (getCouleurSol() == Color.green) (recule();
                                                 ^SlugTracking:9: error: ';' expected but 'else' found.
}else {recule();
 ^SlugTracking:16: error: Unmatched closing brace '}' ignored here
}
^