welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
     if (estFaceMur) {
     	retur false
     }
    avance();getCouleurSol();
    if (getCouleurSol() == Color.green) (recule();
    return true
}else {recule();
return false
}
}       
